Tercer Commit: se vincularon los archivos js al index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="productos.js"></script>
+    <script src="registrarU.js"></script>
     <script src="app.js"></script>
+    <script src="notas.js"></script>
+    <script src="modulo.js"></script>
 </body>
 </html>
